--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,11 @@
 }
 
 .react-chatbot-kit-chat-container {
-  width: 100% !important;
+  width: 500px !important;
+  height: 90vh;
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+}
+
+.react-chatbot-kit-chat-inner-container {
+  height: 90vh;
 }
